[metadata]
name = pbr
author = David Francos Cuartero
author-email = opensource@davidfrancos.net
summary = Wireless pentesting tools
description-file = README.rst
home-page = https://launchpad.net/pbr
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: GPL2+
    Operating System :: GNU/Linux
    Programming Language :: Python
keywords =
    wifi
    aircrack-ng
[files]
packages =
    smoothie
[entry_points]
console_scripts =
    smoothie_testserver = smoothie:socketserver
    smoothie_testclient = smoothie:socketclient
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
